changing r->protocol to HTTP/2.0 for HTTP/2 requests, fixes PR 59313

git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1740108 13f79535-47bb-0310-9956-ffa450edef68