modules/http2/h2_request.c
@@ -372,7 +372,7 @@ request_rec *h2_request_create_rec(const h2_request *req, conn_rec *c)
     }
 
     ap_parse_uri(r, req->path);
-    r->protocol = "HTTP/2";
+    r->protocol = "HTTP/2.0";
     r->proto_num = HTTP_VERSION(2, 0);
 
     r->the_request = apr_psprintf(r->pool, "%s %s %s", 
